--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>ru.exxo.jutil</groupId>
+            <artifactId>printer</artifactId>
+            <version>1.3</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
